# co-scienza-

./: .env.example  .env.sample  .gitignore  LICENSE  PLAN.md  README.md  docker-compose.yml
apps/mobile/: app.json  package-lock.json  package.json
apps/mobile/app/: _layout.tsx
apps/mobile/app/(tabs)/: _layout.tsx  chat.tsx  library.tsx  notes.tsx
apps/mobile/app/note/: [id].tsx
apps/mobile/hooks/: useChat.ts  useNotes.ts  useSources.ts
apps/mobile/lib/: api.ts
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  notes.py  sources.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  adk_session.py  annotation.py  collection.py  note.py  oauth_credential.py  source.py  sync_log.py  tag.py
backend/app/services/ai/: agent.py  datastore.py  tools.py
backend/app/services/gdrive/: client.py
backend/app/services/ingest/: arxiv.py  audio.py  base.py  doi.py  image.py  pdf.py  url.py  youtube.py
backend/app/workers/: celery_app.py  ingest_tasks.py
