[project]
name = "coscienza-backend"
version = "0.1.0"
description = "co-scienza backend — personal knowledge base API"
requires-python = ">=3.12"

[tool.uv]
dev-dependencies = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.28"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "celery[redis]>=5.6.2",
    "fastapi>=0.135.2",
    "faster-whisper>=1.2.1",
    "google-adk>=1.27.5",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.0",
    "google-cloud-aiplatform>=1.143.0",
    "google-cloud-discoveryengine>=0.13.12",
    "google-genai>=1.68.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-multipart>=0.0.22",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.48",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.42.0",
    "youtube-transcript-api>=1.2.4",
]
